--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -92,7 +92,8 @@ body {
     text-align: center;
     position: absolute;
     margin-top: 214px;
-    left: 640px;
+    left: 550px;
+    max-width: 40%;
 }
 
 .header-center-button {
@@ -122,7 +123,7 @@ body {
     position: relative;
     padding: 20px;
     display: block;
-    top: 100px;
+    top: 50px;
 }
 
 .intro-text {
@@ -134,15 +135,19 @@ body {
     text-align: center;
     position: absolute;
     left: 593px;
+    top: 200px;
 }
 
 h1 {
     display: block;
+    position: absolute;
     font-family: "Poppins", sans-serif;
     line-height: 1.1;
     font-size: 48px;
     font-weight: 800;
     text-align: center;
+    left: 550px;
+    max-width: 40%;
 }
 
 /* Контейнер с товарами */
@@ -155,7 +160,7 @@ h1 {
     gap: 20px;
     position: absolute;
     left: 398px;
-    top: 1150px;
+    top: 1050px;
 }
 
 .product-card {
@@ -209,7 +214,8 @@ h1 {
     text-align: center;
     position: absolute;
     top: 50px;
-    left: 450px;
+    left: 400px;
+    max-width: 40%;
 }
 
 .video-background {
@@ -292,11 +298,14 @@ h1 {
 
 .cooperation-intro h2 {
     display: block;
+    position: absolute;
     font-family: "Poppins", sans-serif;
     line-height: 1.1;
     font-size: 48px;
     font-weight: 800;
     text-align: center;
+    left: 33%;
+    max-width: 35%;
 }
 
 .cooperation-text {
@@ -306,6 +315,9 @@ h1 {
     position: absolute;
     width: 100%;
     height: 0;
+    top: 600%;
+    left: 33%;
+    max-width: 35%;
 }
 
 .cooperations {
@@ -368,7 +380,8 @@ h1 {
     line-height: 1.1;
     font-size: 48px;
     font-weight: 800;
-    left: 340px;
+    left: 25%;
+    max-width: 50%;
 }
 
 .prints-techniques {
@@ -423,22 +436,29 @@ h1 {
 }
 
 .realisation-h2 {
+    position: absolute;
     color: rgba(255, 255, 255, 1);
     font-family: "Poppins", sans-serif;
     line-height: 1.2;
     font-size: 24px;
     font-weight: 800;
     text-align: center;
+    bottom: 10%;
+    left: 20%;
+    max-width: 70%;
 }
 
 .realisation-p {
+    position: absolute;
     color:rgba(255, 255, 255, 1);
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 400;
     text-align: center;
-    position: absolute;
+    top: 90%;
+    left: 10%;
+    max-width: 100%;
 }
 
 /* Контейнер со схемой работы */
@@ -464,15 +484,16 @@ h1 {
 }
 
 .scheme-of-work-p {
+    position: absolute;
     color:rgba(255, 255, 255, 1);
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 400;
     text-align: center;
-    position: absolute;
     top: 380px;
-    left: 650px;
+    left: 36%;
+    max-width: 30%;
 }
 
 .steps {
@@ -538,19 +559,21 @@ h1 {
     line-height: 1.1;
     font-size: 48px;
     font-weight: 800;
-    left: 274px;
+    left: 10%;
+    max-width: 90%;
 }
 
 .actual-manufacturing-intro p {
+    position: absolute;
     color:rgba(26, 26, 26, 1);
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 400;
     text-align: center;
-    position: absolute;
     top: 280px;
     left: 380px;
+    max-width: 50%;
 }
 
 .actual-manufacturing {
@@ -592,19 +615,22 @@ h1 {
     line-height: 1.1;
     font-size: 48px;
     font-weight: 800;
-    left: 274px;
+    top: 5%;
+    left: 27%;
+    max-width: 50%;
 }
 
 .shops-header p {
+    position: absolute;
     color:rgba(26, 26, 26, 1);
     font-family: "Open Sans", sans-serif;
     line-height: 1.2;
     font-size: 15px;
     font-weight: 400;
     text-align: center;
-    position: absolute;
     top: 250px;
-    left: 330px;
+    left: 28%;
+    max-width: 50%;
 }
 
 .shops-content {
