--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -533,7 +533,7 @@ h1 {
 .step-icon {
     width: 100px;
     height: 100px;
-    background-color: var(--black-total);
+    background-color: #222222;
     border-radius: 50%;
     display: flex;
     align-items: center;
