--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -138,7 +138,7 @@ body {
     text-align: center;
     padding: 20px;
     display: block;
-    top: 25%;
+    top: 37%;
 }
 
 .intro-text {
@@ -297,7 +297,9 @@ h1 {
 .cooperation-container{
     background-color: var(--grey-total);
     position: relative;
-    width: 1919px;
+    padding: 10px;
+    max-width: 1900px;
+    margin: 0 auto;
     height: 1211px;
     top: 1450px;
 }
@@ -337,12 +339,11 @@ h1 {
 }
 
 .cooperations {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    height: 0;
-    gap: 20px;
     position: absolute;
+    display: flex;
+    /*justify-content: space-between;*/
+    flex-wrap: wrap;
+    gap: 20px;
     left: 20%;
     top: 55%;
 }
@@ -350,19 +351,26 @@ h1 {
 .cooperation-cart {
     text-align: center;
     padding: 10px;
+    flex: 1;
+    max-width: 23%;
 }
 
 .cooperation-cart img {
     width: 100%;
+    height: auto;
     border-radius: 6px;
+    margin-bottom: 15px;
 }
 
-.cooperation-cart h2 {
+.cooperation-cart h3 {
+    position: relative;
     color: var(--black-total);
     font-family: "Poppins", sans-serif;
     line-height: 1.2;
     font-size: 20px;
     font-weight: 800;
+    max-width: 75%;
+    left: 10%;
 }
 
 .cooperation-cart p {
@@ -408,6 +416,39 @@ h1 {
     gap: 20px;
     position: absolute;
     top: 30%;
+}
+
+.prints-techniques-cart {
+    text-align: center;
+    padding: 10px;
+    flex: 1;
+    max-width: 100%;
+}
+
+.prints-techniques-cart img {
+    width: 100%;
+    height: auto;
+    border-radius: 6px;
+    margin-bottom: 15px;
+}
+
+.prints-techniques-cart h3 {
+    position: relative;
+    color: var(--black-total);
+    font-family: "Poppins", sans-serif;
+    line-height: 1.2;
+    font-size: 20px;
+    font-weight: 800;
+    max-width: 75%;
+    left: 10%;
+}
+
+.prints-techniques-cart p {
+    color: var(--black-total);
+    font-family: "Inter", sans-serif;
+    line-height: 1.5;
+    font-size: 16px;
+    font-weight: 400;
 }
 
 /* Контейнер с реализацией */
