--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -520,48 +520,47 @@ h1 {
 
 /* Контейнер со схемой работы */
 .scheme-of-work-container {
-    background-color: #191919e3;
     position: relative;
-    width: 1922px;
+    background-color: #191919e3;
+    max-width: 1922px;
     height: 901px;
     top: 1300px;
     z-index: 0;
+    margin: 0 auto;
 }
 
 .scheme-of-work-h2 {
+    position: relative;
     color: var(--white);
     font-family: "Poppins", sans-serif;
     line-height: 1.1;
     font-size: 48px;
     font-weight: 800;
     text-align: center;
-    position: absolute;
-    top: 260px;
-    left: 700px;
+    top: 30%;
 }
 
 .scheme-of-work-p {
-    position: absolute;
+    position: relative;
     color:var(--white);
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 400;
     text-align: center;
-    top: 380px;
-    left: 36%;
+    top: 30%;
+    left: 35%;
     max-width: 30%;
 }
 
 .steps {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     height: 0;
-    gap: 20px;
-    position: absolute;    
-    top: 540px;
-    left: 550px;
+    top: 40%;
+    left: 30%;
 }
 
 .step {
@@ -585,11 +584,14 @@ h1 {
 }
 
 .step-text {
+    position: relative;
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 400;
     color: var(--white);
+    max-width: 65%;
+    left: 17%;
 }
 
 /* Контейнер о собственном производстве */
