--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -236,6 +236,9 @@ h1 {
 
 .video-background {
     background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .video-overlay {
@@ -256,7 +259,7 @@ h1 {
     border: none;
     border-radius: 50%;
     cursor: pointer;
-    transition: background-color 0.6s, transform 0.4s;
+    transition: background-color 1s, transform 2s;
     top: 50%;
     left: 50%;
     width: 105px;
@@ -266,7 +269,7 @@ h1 {
     justify-content: center;
 }
 
-.play-button:hover {
+.video-section:hover .play-button {
     background-color: dimgray;
     transform: scale(1.05);
 }
@@ -287,12 +290,6 @@ h1 {
     margin-top: 20px;
     text-align: center;
     padding: 0 20px;
-}
-
-.video-background {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 /* Контейнер с производством для компаний и брендов */
