--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -281,63 +281,48 @@ h1 {
 /* Контейнер с производством для компаний и брендов */
 .cooperation-container{
     background-color: var(--grey-total);
-    position: relative;
     padding: 10px;
-    max-width: 1900px;
-    margin: 0 auto;
-    height: 1211px;
-    top: 1450px;
+    width: 100%;
+    margin: -7% auto;
 }
 
 .cooperation-intro {
     text-align: center;
-    position: absolute;
-    padding: 20px;
-    display: block;
-    width: 100%;
-    height: 0;
-    top: 20%;
+    margin-bottom: 40px;
+    padding: 10% 0 0 0;
 }
 
 .cooperation-intro h2 {
-    display: block;
-    position: absolute;
     font-family: "Poppins", sans-serif;
     line-height: 1.1;
     font-size: 48px;
     font-weight: 800;
-    text-align: center;
-    left: 33%;
-    max-width: 35%;
+    margin: 0 auto;
+    max-width: 25%;
 }
 
 .cooperation-text {
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
-    position: absolute;
-    width: 100%;
-    height: 0;
-    top: 600%;
-    left: 33%;
-    max-width: 35%;
+    margin: 20px auto 0;
+    max-width: 30%;
 }
 
 .cooperations {
-    position: absolute;
     display: flex;
-    /*justify-content: space-between;*/
+    justify-content: center;
     flex-wrap: wrap;
-    gap: 20px;
-    left: 20%;
-    top: 55%;
+    max-width: 60%;
+    padding: 1% 0 2% 19%;
 }
 
 .cooperation-cart {
     text-align: center;
-    padding: 10px;
-    flex: 1;
+    padding: 20px;
+    flex: 1 1 calc(33.333% - 40px); /* Ширина: под 3 элемента в строке */
     max-width: 23%;
+    box-sizing: border-box;
 }
 
 .cooperation-cart img {
@@ -348,14 +333,14 @@ h1 {
 }
 
 .cooperation-cart h3 {
-    position: relative;
     color: var(--black-total);
     font-family: "Poppins", sans-serif;
     line-height: 1.2;
     font-size: 20px;
     font-weight: 800;
-    max-width: 75%;
-    left: 10%;
+    margin: 0 0 0 21%;
+    max-width: 55%;
+    text-align: center;
 }
 
 .cooperation-cart p {
