--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -221,7 +221,7 @@ h1 {
     font-weight: 800;
     text-align: center;
     position: absolute;
-    top: 5%;
+    top: 10%;
     max-width: 40%;
 }
 
@@ -233,7 +233,7 @@ h1 {
 
 .video-overlay {
     position: absolute;
-    top: 0;
+    top: 10%;
     left: 0;
     width: 100%;
     height: 100%;
@@ -338,7 +338,7 @@ h1 {
     line-height: 1.2;
     font-size: 20px;
     font-weight: 800;
-    margin: 0 0 0 21%;
+    margin: 0 auto;
     max-width: 55%;
     text-align: center;
 }
@@ -353,46 +353,37 @@ h1 {
 
 /* Контейнер со способами нанесения принтов и вышивки */
 .prints-techniques-container {
-    position: relative;
     width: 1150px;
-    height: 700px;
-    top: 1450px;
-    left: 20%;
+    margin: 10% auto 0 auto;
+    padding: 20px;
 }
 
 .prints-techniques-intro {
     text-align: center;
-    position: absolute;
-    padding: 20px;
-    width: 100%;
-    height: 0;
+    margin-bottom: 40px;
 }
 
 .prints-techniques-intro h2 {
-    position: absolute;
     font-family: "Poppins", sans-serif;
     line-height: 1.1;
     font-size: 48px;
     font-weight: 800;
-    left: 25%;
     max-width: 50%;
+    margin: 0 auto;
 }
 
 .prints-techniques {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    height: 0;
     gap: 20px;
-    position: absolute;
-    top: 30%;
+    justify-content: space-between;
 }
 
 .prints-techniques-cart {
     text-align: center;
     padding: 10px;
-    flex: 1;
-    max-width: 100%;
+    flex: 1 1 calc(50% - 20px); /* Ширина: под 2 элемента в строке */
+    box-sizing: border-box;
 }
 
 .prints-techniques-cart img {
@@ -403,14 +394,13 @@ h1 {
 }
 
 .prints-techniques-cart h3 {
-    position: relative;
     color: var(--black-total);
     font-family: "Poppins", sans-serif;
     line-height: 1.2;
     font-size: 20px;
     font-weight: 800;
-    max-width: 75%;
-    left: 10%;
+    max-width: 100%;
+    margin-bottom: 10px;
 }
 
 .prints-techniques-cart p {
@@ -424,8 +414,7 @@ h1 {
 /* Контейнер с реализацией */
 .realisation {
     position: relative;
-    top: 1500px;
-    left: 20%;
+    margin: 3% auto 0 auto;
     width: 1125px;
     height: 350px;
     border-radius: 15px;
@@ -434,6 +423,11 @@ h1 {
     background-position: left center;
     background-color: var(--black-half);
     z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 /* Второе изображение внутри контейнера сразу за первым */
@@ -449,93 +443,75 @@ h1 {
     background-repeat: no-repeat;
     background-position: right center;
     background-color: var(--black-half);
+    z-index: -1;
+    border-radius: 15px;
 }
 
 .realisation-overlay {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    width: 738px;
-    height: 71px;
-    padding: 20px;
+    max-width: 738px;
+    color: var(--white);
+    margin: auto;
 }
 
 .realisation-h2 {
-    position: absolute;
-    color: var(--white);
     font-family: "Poppins", sans-serif;
     line-height: 1.2;
     font-size: 24px;
     font-weight: 800;
-    text-align: center;
-    bottom: 10%;
-    left: 20%;
+    margin-bottom: 20px;
     max-width: 70%;
 }
 
 .realisation-p {
-    position: absolute;
-    color:var(--white);
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 400;
-    text-align: center;
-    top: 90%;
-    left: 10%;
-    max-width: 100%;
+    margin-top: 0;
 }
 
 /* Контейнер со схемой работы */
 .scheme-of-work-container {
-    position: relative;
     background-color: #191919e3;
-    max-width: 1922px;
-    height: 901px;
-    top: 1300px;
-    z-index: 0;
-    margin: 0 auto;
+    margin: -5% auto 0 auto;
+    padding: 20px;
+    text-align: center;
 }
 
 .scheme-of-work-h2 {
-    position: relative;
     color: var(--white);
     font-family: "Poppins", sans-serif;
     line-height: 1.1;
-    font-size: 48px;
+    font-size: 70px;
     font-weight: 800;
-    text-align: center;
-    top: 30%;
+    margin-top: 7%;
 }
 
 .scheme-of-work-p {
-    position: relative;
     color:var(--white);
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 400;
-    text-align: center;
-    top: 30%;
-    left: 35%;
-    max-width: 30%;
+    max-width: 25%;
+    margin: 0 auto 3% auto;
 }
 
 .steps {
-    position: relative;
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    height: 0;
-    top: 40%;
-    left: 30%;
+    gap: 20px;
+    justify-content: center;
+    margin-bottom: 8%;
 }
 
 .step {
     flex: 1;
-    min-width: 120px;
     max-width: 200px;
     text-align: center;
 }
@@ -545,85 +521,87 @@ h1 {
     height: 100px;
     background-color: #222222;
     border-radius: 50%;
+    margin: 0 auto 10px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto 10px;
-    font-size: 24px;
-    color: var(--white);
 }
 
 .step-text {
-    position: relative;
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 400;
     color: var(--white);
-    max-width: 65%;
-    left: 17%;
+    max-width: 80%;
+    margin: 0 auto;
 }
 
 /* Контейнер о собственном производстве */
 .actual-manufacturing-container {
-    position: relative;
-    width: 1346px;
-    height: 1098px;
-    top: 1300px;
-    left: 250px;
+    max-width: 1346px;
+    margin: 3% auto 0 auto;
+    padding: 20px;
 }
 
 .actual-manufacturing-intro {
     text-align: center;
-    position: absolute;
-    padding: 20px;
-    width: 100%;
-    height: 0;
+    margin-bottom: 7%;
 }
 
 .actual-manufacturing-intro h2 {
-    position: absolute;
     color: var(--black-total);
     font-family: "Poppins", sans-serif;
     line-height: 1.1;
     font-size: 48px;
     font-weight: 800;
-    left: 10%;
     max-width: 90%;
+    margin: 0 auto 5% auto;
 }
 
 .actual-manufacturing-intro p {
-    position: absolute;
     color:var(--black-total);
     font-family: "Inter", sans-serif;
     line-height: 1.5;
     font-size: 16px;
     font-weight: 400;
-    text-align: center;
-    top: 280px;
-    left: 380px;
     max-width: 50%;
+    margin: 0 auto;
 }
 
 .actual-manufacturing {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    height: 0;
     gap: 20px;
-    position: absolute;
-    top: 40%;
-    left: 10%;
+    justify-content: center;
+    max-width: 75%;
+    margin: 0 auto;
 }
 
 .actual-manufacturing-cart {
+    flex: 1 1 calc(33.333% - 20px);
+    max-width: calc(33.333% - 20px);
+    box-sizing: border-box;
     text-align: center;
-    padding: 10px;
 }
 
 .actual-manufacturing-cart img {
     width: 100%;
     border-radius: 6px;
+}
+
+@media (max-width: 1205px) {
+    .actual-manufacturing-cart {
+        flex: 1 1 calc(50% - 20px);
+        max-width: calc(50% - 20px);
+    }
+}
+
+@media (max-width: 600px) {
+    .actual-manufacturing-cart {
+        flex: 1 1 100%;
+        max-width: 100%;
+    }
 }
 /* Контейнер с адресами магазинов */
 .shops-container {
