--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -719,25 +719,31 @@ h1 {
 /* Контейнер с подвалом */
 footer {
     background-color: var(--black-total);
-    text-align: center;
-    padding: 20px 0;
+    width: 100%; /* Фон на всю ширину экрана */
+    height: 230px;
     margin: 0 auto;
-    /*position: relative;*/
-    /*display: block;    */
-    /*width: 1227px;*/
-    /*height: 230px;*/
-    /*top: 850px;*/
-    /*z-index: 1;*/
+}
+
+.footer-content {
+    max-width: 1127px; /* Ограничение ширины */
+    margin: 0 auto; /* Центрируем по горизонтали */
+    padding: 0 15px; /* Немного внутреннего отступа для адаптивности */
 }
 
 .footer-line {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 400px;
-    /*width: 1380px;*/
-    /*height: 230px;*/
+    width: 100%;
+    padding: 30px 0;
+    margin-top: 0; /* Здесь можно добавить отступ от верхнего края страницы, если будет нужно */
+}
 
+.footer-center {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+    width: 100%;
 }
 
 .footer-center-button {
@@ -750,9 +756,6 @@ footer {
     font-weight: 800;
     border-radius: 10px;
     text-decoration: none;
-    /*position: absolute;*/
-    /*top: 75%;*/
-    /*left: 67%;*/
 
     transition: background-color 0.3s linear;
 
